# url-shortener

./: .env  .gitignore  README.md  pyproject.toml
app/: api.py  crud.py  deps.py  main.py  schema.py
app/core/: config.py  db.py  shortener.py
app/util/: mytime.py
